# credit-default-mlops

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
.github/workflows/: ci.yml
api/: main.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: credit-default.json  dashboards.yml
src/cdmlops/: __init__.py  config.py  data.py  drift.py  evaluate.py  features.py  monitoring.py  train.py
tests/: test_pipeline.py
