[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cdmlops"
version = "0.1.0"
description = "Production MLOps pipeline for a credit-default classifier: DVC + MLflow + eval gate + Evidently drift + FastAPI/Prometheus."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mlops", "mlflow", "dvc", "evidently", "drift-detection", "model-monitoring", "prometheus", "ci-cd"]
authors = [{ name = "Taimoor Karim" }]

dependencies = [
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "mlflow>=2.12",
    "dvc>=3.0",
    "evidently>=0.4",
]

[project.optional-dependencies]
serve = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "pydantic>=2.6", "prometheus-client>=0.20"]
dev = ["pytest>=8.0", "httpx>=0.27"]
all = ["cdmlops[serve,dev]"]

[project.scripts]
cdm-generate = "cdmlops.data:main"
cdm-train = "cdmlops.train:main"
cdm-gate = "cdmlops.evaluate:main"
cdm-drift = "cdmlops.drift:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cdmlops"]
